[project]
name = "pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sean Kim", email = "33474168+seankim658@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.13.3",
    "pyyaml>=6.0.3",
]

[project.scripts]
pipeline = "pipeline:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "types-pyyaml>=6.0.12.20260408",
]
