[project]
name = "pipeline"
version = "0.5.0"
description = "Build pipeline for Through the Lines: address-keyed congressional district history."
readme = "README.md"
authors = [
    { name = "Sean Kim", email = "33474168+seankim658@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "geopandas>=1.1.3",
    "pydantic>=2.13.3",
    "pyogrio>=0.12.1",
    "pyyaml>=6.0.3",
]

[project.scripts]
pipeline = "pipeline:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "types-geopandas>=1.1.3.20260408",
    "types-pyyaml>=6.0.12.20260408",
]
